gcc/testsuite/gdc.test/compilable/test16572.d
class K
{
    inout(int) f() inout
    {
        return var;
    }

    void bug()
    {
        auto d = &f;
        d();
    }

    int var;
}
